--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,16 @@
+<!--<div class="pred-container pred-card-wrapper" *ngIf="authService.currentUser.admin">-->
+<div class="right_col" role="main">
 
-<div class="pred-container pred-card-wrapper" *ngIf="authService.currentUser.admin">
   <div>
     <app-user-info-card></app-user-info-card>
   </div>
-  <div>
-    <app-all-devices-card></app-all-devices-card>
-  </div>
+
   <div>
     <app-all-locations-card></app-all-locations-card>
+  </div>
+
+  <div>
+    <app-all-devices-card></app-all-devices-card>
   </div>
   <div>
     <app-critical-devices-card></app-critical-devices-card>
@@ -19,8 +22,5 @@
     <app-health-summary-card></app-health-summary-card>
   </div>
 
-  <!--
-	<mat-card>Simple card1</mat-card>
-  -->
 </div>
 
