--- a/src/app/devices-list/devices-list.component.html
+++ b/src/app/devices-list/devices-list.component.html
@@ -1,3 +1,4 @@
+<div class="right_col" role="main">
 <div class="example-container mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource">
 
@@ -34,4 +35,5 @@
                  [pageSizeOptions]="[5, 10, 20]"
                  [showFirstLastButtons]="true">
   </mat-paginator>
+</div>
 </div>
