--- a/src/app/cards/all-devices-card/all-devices-card.component.html
+++ b/src/app/cards/all-devices-card/all-devices-card.component.html
@@ -1,3 +1,4 @@
+<!--
 <mat-card class="example-card pred-card">
   <mat-card-header>
     <mat-card-title class="pred-card-title aa">
@@ -21,3 +22,87 @@
   </mat-card-actions>
 </mat-card>
 
+-->
+
+<div class="row">
+  <div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="dashboard_graph">
+
+      <div class="row x_title">
+        <div class="col-md-6">
+          <h3>Network Activities
+            <small>Graph title sub-title</small>
+          </h3>
+        </div>
+        <div class="col-md-6">
+          <div id="reportrange" class="pull-right" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+            <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
+            <span>December 30, 2014 - January 28, 2015</span> <b class="caret"></b>
+
+            <!--<ngb-datepicker #dp [(ngModel)]="model" (navigate)="date = $event.next"></ngb-datepicker>-->
+
+            <!--<div class="input-group">
+              <input class="form-control" placeholder="yyyy-mm-dd" name="dp" [displayMonths]="displayMonths" [navigation]="navigation" [outsideDays]="outsideDays"
+                     [showWeekNumbers]="showWeekNumbers" ngbDatepicker #d="ngbDatepicker">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+              </div>-->
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-9 col-sm-9 col-xs-12">
+          <div id="chart_plot_01" class="demo-placeholder"></div>
+        </div>
+        <div class="col-md-3 col-sm-3 col-xs-12 bg-white">
+          <div class="x_title">
+            <h2>Top Campaign Performance</h2>
+            <div class="clearfix"></div>
+          </div>
+
+          <div class="col-md-12 col-sm-12 col-xs-6">
+            <div>
+              <p>Facebook Campaign</p>
+              <div class="">
+                <div class="progress progress_sm" style="width: 76%;">
+                  <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="80"></div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <p>Twitter Campaign</p>
+              <div class="">
+                <div class="progress progress_sm" style="width: 76%;">
+                  <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="60"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 col-sm-12 col-xs-6">
+            <div>
+              <p>Conventional Media</p>
+              <div class="">
+                <div class="progress progress_sm" style="width: 76%;">
+                  <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="40"></div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <p>Bill boards</p>
+              <div class="">
+                <div class="progress progress_sm" style="width: 76%;">
+                  <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="50"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="clearfix"></div>
+      </div>
+    </div>
+
+  </div>
+  <br/>
